[project]
name = "short-url"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sshevchenko", email = "serhii.shevchenko@wpp.com" }
]
dependencies = [
    "bloomfilter @ file:///home/happy/workspace/sandbox/bloomfilter/dist/bloomfilter-0.1.0-py3-none-any.whl",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
generate-hashes = true
lock-with-sources = true
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/short_url"]
